gfx/layers/PersistentBufferProvider.cpp
@@ -283,7 +283,9 @@ PersistentBufferProviderShared::BorrowDrawTarget(
 
   // First try to reuse the current back buffer. If we can do that it means
   // we can skip copying its content to the new back buffer.
-  if (tex && tex->IsReadLocked()) {
+  if ((mTextureLockIsUnreliable.isSome() &&
+       mTextureLockIsUnreliable == mBack) ||
+      (tex && tex->IsReadLocked())) {
     // The back buffer is currently used by the compositor, we can't draw
     // into it.
     tex = nullptr;
@@ -292,7 +294,9 @@ PersistentBufferProviderShared::BorrowDrawTarget(
   if (!tex) {
     // Try to grab an already allocated texture if any is available.
     for (uint32_t i = 0; i < mTextures.length(); ++i) {
-      if (!mTextures[i]->IsReadLocked()) {
+      if (!mTextures[i]->IsReadLocked() &&
+          !(mTextureLockIsUnreliable.isSome() &&
+            mTextureLockIsUnreliable.ref() == i)) {
         mBack = Some(i);
         tex = mTextures[i];
         break;
@@ -350,6 +354,9 @@ PersistentBufferProviderShared::BorrowDrawTarget(
   if (!tex || !tex->Lock(OpenMode::OPEN_READ_WRITE)) {
     return nullptr;
   }
+
+  // Clear dirty texture, since new back texture is selected.
+  mTextureLockIsUnreliable = Nothing();
 
   mDrawTarget = tex->BorrowDrawTarget();
   if (mBack != previousBackBuffer && !aPersistedRect.IsEmpty()) {
@@ -498,6 +505,9 @@ void PersistentBufferProviderShared::ClearCachedResources() {
       mFront = Some<uint32_t>(mTextures.length() - 1);
     }
   }
+  // Set front texture as dirty texture.
+  // The texture's read lock is unreliable after this function call.
+  mTextureLockIsUnreliable = mFront;
 }
 
 void PersistentBufferProviderShared::Destroy() {
